test/errors/type/str/endswith2.yasl
''.endswith(1, .true)
